# HetGNN

./: .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  README_HEALING_EVAL.md  VALIDATION.md  pyproject.toml  requirements-ml.txt  requirements.txt  run_healing_eval.bat  run_healing_eval.sh
data/metrics/: _smoke.csv  chameleon_dynamic_guardrail.csv  dual_ascent_chameleon.csv  dual_cvar_chameleon.csv  scenario1.csv  scenario3.csv  scenario3_fast.csv  scenario3_fast_strict.csv  scenario3_strict_attack20.csv  shock_activate.csv  shock_no_constraints.csv  smoke_dynamic_guardrail.csv  squirrel_baseline_tau_anneal.csv  squirrel_split0_baseline_tau_anneal_v2.csv  squirrel_split0_dynamic_guardrail_shield_a0.1_v2.csv  squirrel_split0_dynamic_guardrail_v2.csv  sweep_0.15.csv  sweep_0.35.csv  sweep_0.35_shock.csv  sweep_0.55.csv  sweep_0.75.csv
docs/: research_foundations.md
scripts/: run_nodecls_wikipedia.py  validation_checks.py
src/hetgnn_spectral_stability/: __init__.py  config.py
src/hetgnn_spectral_stability/layers/: __init__.py  stochastic_rewire.py
src/hetgnn_spectral_stability/models/: __init__.py  simple_model.py
src/hetgnn_spectral_stability/regularizers/: __init__.py  spectral.py
